[package]
name = "laminar"
version = "0.1.0"
edition = "2021"
authors = ["Akhil Kandi <akhilprm999@gmail.com>"]
description = "A unified multi-broker OMS and Strategy monolith in Rust"

[dependencies]
# --- Core Logic & Async ---
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# --- Data Handling ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5" # Thread-safe state management for OMS
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- Logging & Observability ---
tracing = "0.1"
tracing-subscriber = "0.3"

# --- Optional Broker SDKs ---
# We use 'dep:' syntax in features to keep these optional
hyperliquid_rust_sdk = { version = "0.6", optional = true }
# binance = { version = "0.11", optional = true }

[features]
default = ["simulator"]
# Internal simulated broker for testing
simulator = []

# Hyperliquid support
hyperliquid = ["dep:hyperliquid_rust_sdk"]

# Future expansion
# binance = ["dep:binance"]

[dev-dependencies]
# For unit tests
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort' # Faster binary and ensures clean state
